--- a/css/services.css
+++ b/css/services.css
@@ -169,6 +169,10 @@ img.XQ_style{
 	font-size:43pt;
 	margin-top:50px;
 }
+.part-title-1{
+	font-size:43pt;
+	margin-top:50px;
+}
 .part-mid-img-kt{
 	margin-top:150px;
 	width:38%;
