--- a/css/culture.css
+++ b/css/culture.css
@@ -7,7 +7,7 @@
 	margin-bottom: 50px;
 }
 .cultureFloat+div p{
-	margin:16px;
+	margin:16px 16px 16px 0px;
 }
 .cultureLeft{
 	width: 240px;
@@ -15,8 +15,9 @@
 	float: left;
 }
 .cultureLeft>img{
-	width: 100%;
-	margin: 30px 0;
+	height: 100%;
+	object-fit: contain;
+	/*margin: 30px 0;*/
 }
 .cultureRight{
 	width: 595px;
